2005-09-15  Romain Francoise  <romain@orebokech.com>

	* message.el (message-fill-paragraph): Clarify docstring.

2005-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-display-part): Protect against broken
	MIME messages.

2005-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-edit-article-done): Remove text props
	before parsing header.

2005-09-11  Jari Aalto  <jari.aalto@cante.net>

	* html2text.el: (html2text-replace-list): Add new entities.

2005-09-11  Romain Francoise  <romain@orebokech.com>

	* message.el (message-alternative-emails): Improve docstring.
	(message-setup-1): Call `message-use-alternative-email-as-from'
	after `message-setup-hook' to give it precedence over posting
	styles, etc.
	(message-use-alternative-email-as-from): Add docstring.  Remove
	the original From header if present.

	* nnml.el (nnml-compressed-files-size-threshold): New variable.
	(nnml-save-mail): Use it.

	* gnus-uu.el (gnus-uu-mark-series): Return number of marked
	articles.  Add new argument `silent'.
	(gnus-uu-mark-all): Report the total number of marked articles.

2005-09-10  Romain Francoise  <romain@orebokech.com>

	* gnus-uu.el (gnus-message-process-mark): Use gnus-message.
	(gnus-uu-mark-series): Likewise.

2005-09-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam-report.el (spam-report-gmane): Fix generation of spam
	report URL.

2005-09-10  Simon Josefsson  <jas@extundo.com>

	* gnus-agent.el (gnus-agent-synchronize-flags): Make the default
	t, based on discussion on the ding list with Robert Epprecht
	<epprecht@solnet.ch>.

2005-09-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam-report.el (spam-report-gmane): Make it work without
	X-Report-Spam header.  Gmane now only provides Archived-At.  This
	is only used if `spam-report-gmane-use-article-number' is nil.
	(spam-report-gmane-spam-header): Removed.  Not used anymore.

	* gnus-sum.el (gnus-thread-sort-by-recipient): New function to